fixed overflow on mobile

--- a/src/styles/_hero.scss
+++ b/src/styles/_hero.scss
@@ -38,6 +38,7 @@ header {
     width: 100vw;
     height: fit-content;
     // overflow-x: hidden;
+    overflow-x: hidden;
     min-height: 500px;
     z-index: 1;
     .hero-bg {
