--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -56,6 +56,7 @@ header {
   height: -webkit-fit-content;
   height: -moz-fit-content;
   height: fit-content;
+  overflow-x: hidden;
   min-height: 500px;
   z-index: 1;
 }
